# projeto-bd

./: .env.prod.example  .gitignore  README.md  analytical_queries.sql  data.sql  docker-compose.prod.yml  docker-compose.yml  hospital.sql
.github/workflows/: deploy.yml
back/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
back/api/routers/: atendimento.py  paciente.py  procedimento.py  profissional.py  relatorio.py
back/db/: connect.py
back/db/repository/: atendimento_repository.py  paciente_repository.py  procedimento_repository.py  profissional_repository.py  relatorio_repository.py
back/exceptions/: errors.py
back/schemas/: atendimento.py  paciente.py  procedimento.py  profissional.py  relatorio.py
back/service/: atendimento_service.py  paciente_service.py  procedimento_service.py  profissional_service.py  relatorio_service.py
front/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
front/src/: App.tsx  index.css
front/src/api/: client.ts
front/src/components/atendimento/: AtendimentosModal.tsx  NovoAtendimentoModal.tsx
front/src/components/layout/: AppLayout.tsx  Sidebar.tsx
front/src/components/paciente/: EditarPacienteModal.tsx  NovoPacienteModal.tsx
front/src/lib/: format.ts  useFetch.ts
front/src/pages/: AtendimentoPage.tsx  PacientesPage.tsx
front/src/types/: index.ts
nginx/templates/: default.conf.template
scripts/: 02_grant.sh  crud.sql  crud_var.sql  data.sql  hospital.sql
(+11 files in other folders)
