[tool.poetry]
name = "hospital-api"
version = "0.1.0"
description = "API FastAPI (SQL puro) para o projeto Hospital"
authors = ["viniciusvl"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
mysql-connector-python = "^9.1.0"
pydantic = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
